# OpenGL_Tutorial

./: README.md
3DViewer/: CMakeLists.txt
3DViewer/shader/: basic.shader
3DViewer/src/: main.cpp  shader.h
Assignment_0/: Assignment_0_handout.docx
Assignment_2/: Joint_ID.pptx
Assignment_3/Assignment_3_solution/Assignment_3_mac/: CMakeLists.txt
Assignment_3/Assignment_3_solution/Assignment_3_mac/src/: main.cpp
Assignment_3/Assignment_3_solution/Assignment_3_win/: Assignment_3_win.sln  Assignment_3_win.vcxproj
Assignment_3/Assignment_3_solution/Assignment_3_win/Debug/: Assignment_3_win.vcxproj.FileListAbsolute.txt  vc142.idb
Assignment_3/Assignment_3_solution/Assignment_3_win/Debug/Assignment_3_win.tlog/: CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog
Assignment_4/: Assignment_4_handout.docx
Assignment_5/Assignment_5_handout/Images/: linkage.pptx
_backup/Assignment_1/: Assignment_1_handout.docx
_backup/Assignment_1/Assignment_1_solution/Assignment_1_mac/: CMakeLists.txt
_backup/Assignment_1/Assignment_1_solution/Assignment_1_mac/src/: shaderSource.h
_backup/Assignment_1/Assignment_1_solution/Assignment_1_win/: Assignment_1_win.sln  Assignment_1_win.vcxproj  Assignment_1_win.vcxproj.filters
_backup/Assignment_1/Assignment_1_solution/Assignment_1_win/src/: main.cpp
_backup/Assignment_2/: Assignment_2_handout.docx
_backup/Assignment_3/: Assignment_3_handout.docx
_backup/Assignment_5/Assignment_5_handout/: Assignment_5_handout.docx
_backup/Assignment_5/Assignment_5_handout/Images/: joint.pptx
(+10 files in other folders)
